--- a/map.html
+++ b/map.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8">
 </head>
 <body>
+Google Map API:
     <div id="map-canvas" style="width: 800px; height: 500px;">
     </div>
 </body>
