added google map with multiple locations map2.html

--- a/index.html
+++ b/index.html
@@ -484,10 +484,10 @@ Remember that you may shoot more pictures than ever before in your life because 
       </div>
       <div class="col-md">
         <div>
-          <span class="social-icons h2"><i class="fab fa-instagram"></i></span>
-          <span class="social-icons h2"><i class="fab fa-facebook"></i></span>
-          <span class="social-icons h2"><i class="fab fa-twitter"></i></span>
-          <span class="social-icons h2"><i class="fab fa-youtube"></i></span>
+          <a href="#"><span class="social-icons h2"><i class="fab fa-instagram"></i></span></a>
+          <a href="#"><span class="social-icons h2"><i class="fab fa-facebook"></i></span></a>
+          <a href="#"><span class="social-icons h2"><i class="fab fa-twitter"></i></span></a>
+          <a href="#"><span class="social-icons h2"><i class="fab fa-youtube"></i></span></a>
         </div>  
       </div>
       
